--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
 jsonwebtoken = "7.2.0"
 postgres = "0.18.1"
-serde = "1.0.117"
+serde = {version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 sha2 = "0.9.1"
+time = "0.2.22"
