--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3"
+actix-session = "0.4.0"
 bcrypt = "0.9.0"
 chrono = "0.4.19"
 diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
-jsonwebtoken = "7.2.0"
+futures-util = "0.3.7"
+lazy_static = "1.4.0"
 postgres = "0.18.1"
 serde = {version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
-sha2 = "0.9.1"
-time = "0.2.22"
+
