--- a/.env.fake
+++ b/.env.fake
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://username:password@localhost:6000/dbName
+DATABASE_URL=postgres://username:password@localhost:6000/postgres
 SESSION_SECRET=thisIsASecretValueForActixSession
