--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+actix-multipart = "0.3.0"
 actix-session = "0.4.0"
+actix-web = "3"
 bcrypt = "0.9.0"
 diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
@@ -16,4 +17,3 @@ futures-util = "0.3.7"
 postgres = "0.18.1"
 serde = {version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
-
