--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
 futures-util = "0.3.7"
 postgres = "0.18.1"
+r2d2_redis = "0.13.0"
 serde = {version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
