setup to work on WSL with more db conns

--- a/.env.fake
+++ b/.env.fake
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://username:password@localhost:6000/postgres
+DATABASE_URL=postgres://postgres:password@localhost:6000/postgres
 SESSION_SECRET=thisIsASecretValueForActixSession
